gccida/g0/consec_sets_giv
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7378:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+50h] [rbp-20h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7378:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+50h] [rbp-20h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7394:1: error: use of undeclared identifier 'v'
v = ( induction_1 *)&add_vala; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7394:20: error: expected expression
v = ( induction_1 *)&add_vala; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7394:7: error: use of undeclared identifier 'induction_1'
v = ( induction_1 *)&add_vala; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7397:10: error: use of undeclared identifier 'v'
LODWORD( v) = first_benefita; 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7398:14: error: use of undeclared identifier 'v'
*( ( _BYTE *)v + 100) &= ~0x40u; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7399:1: error: use of undeclared identifier 'v'
v->derive_adjustment = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7400:1: error: use of undeclared identifier 'v'
v->ext_dependent = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7402:69: error: use of undeclared identifier 'v'
ivs->regs[dest_rega->fld[0].rtuint].iv.class = (  struct iv_class *)v; 
                                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7419:31: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
: ( v11 = (  struct rtx_def *)pa[2]), 
                              ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7420:15: error: expected ')'
(  struct set = v11) != 0LL 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7420:1: note: to match this '('
(  struct set = v11) != 0LL 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7420:22: error: expected expression
(  struct set = v11) != 0LL 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7426:4: error: use of undeclared identifier 'v'
&& v->src_reg == src_rega) ) 
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7434:1: error: use of undeclared identifier 'v'
v->mult_val = *mult_val; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7435:1: error: use of undeclared identifier 'v'
v->add_val = *add_vala; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7436:1: error: use of undeclared identifier 'v'
v->benefit += benefit; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7445:31: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
: ( v13 = (  struct rtx_def *)pa[2]), 
                              ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7446:15: error: expected ')'
(  struct set = v13) == 0LL 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/loop.c:7446:1: note: to match this '('
(  struct set = v13) == 0LL 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/consec_sets_giv/src/obj/loop.o] Error 1
